--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/node": "^24.0.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-router-dom": "^5.3.3",
     "typescript": "^5.8.3"
   },
   "scripts": {
@@ -28,6 +29,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3"
   }
 }
